test/scc_test/exp/semantic-errors/011.a
011.t:4:7: error: expression must have real or pointer-to-object type